--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "dompurify": "^3.0.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
+   
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,4 +43,8 @@
     ]
   },
   "proxy": "http://localhost:8800/api/"
+  
 }
+
+
+
