--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,11 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
-   
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +42,4 @@
     ]
   },
   "proxy": "http://localhost:8800/api/"
-  
 }
-
-
-
